Recursive invocation of missing child suppliers
last commit